Revert "Pulling edit user endpoint into 'backend'"
